; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-lua.c_lua_destroy.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-lua.c_lua_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_lua_priv = type { %struct.lwan_lua_priv*, %struct.lwan_lua_priv*, %struct.lwan_lua_priv*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @lua_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lua_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.lwan_lua_priv*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.lwan_lua_priv*
  store %struct.lwan_lua_priv* %5, %struct.lwan_lua_priv** %3, align 8
  %6 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %3, align 8
  %7 = icmp ne %struct.lwan_lua_priv* %6, null
  br i1 %7, label %8, label %27

8:                                                ; preds = %1
  %9 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %3, align 8
  %10 = getelementptr inbounds %struct.lwan_lua_priv, %struct.lwan_lua_priv* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @pthread_key_delete(i32 %11)
  %13 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %3, align 8
  %14 = getelementptr inbounds %struct.lwan_lua_priv, %struct.lwan_lua_priv* %13, i32 0, i32 2
  %15 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %14, align 8
  %16 = call i32 @free(%struct.lwan_lua_priv* %15)
  %17 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %3, align 8
  %18 = getelementptr inbounds %struct.lwan_lua_priv, %struct.lwan_lua_priv* %17, i32 0, i32 1
  %19 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %18, align 8
  %20 = call i32 @free(%struct.lwan_lua_priv* %19)
  %21 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %3, align 8
  %22 = getelementptr inbounds %struct.lwan_lua_priv, %struct.lwan_lua_priv* %21, i32 0, i32 0
  %23 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %22, align 8
  %24 = call i32 @free(%struct.lwan_lua_priv* %23)
  %25 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %3, align 8
  %26 = call i32 @free(%struct.lwan_lua_priv* %25)
  br label %27

27:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @pthread_key_delete(i32) #1

declare dso_local i32 @free(%struct.lwan_lua_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
